# muttvcardsearch

./: .README.md.swp  .gitignore  1cache.cpp  AUTHORS  CMakeLists.txt  Makefile  README.md  cache.cpp  cache.cpp.autosave  cache.h  cardcurler.cpp  cardcurler.h  carddavexport.xml  carddavquery.qrc  cardsearch.xml  constants.h  encoding.cpp  encoding.h  fileutils.cpp  fileutils.h  main.cpp  muttvcardsearch  option.cpp  option.h  person.cpp  person.h  qvcardsearch.pro  searchtemplates.cpp  searchtemplates.h  settings.cpp  settings.h  stringutils.cpp  stringutils.h  unicode.h  url.cpp  url.h  version.h
cmake/Modules/: FindSqlite3.cmake
manual/: muttvcardsearch.man
vCard/: strutils.cpp  strutils.h  vcard.cpp  vcard.h  vcard_globals.h  vcardparam.cpp  vcardparam.h  vcardproperty.cpp  vcardproperty.h
vcard/: card.cpp  card.h  cardproperty.cpp  cardproperty.h  cardtokens.h
